--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,3 @@
-/* Write your global styles here, in PostCSS syntax */
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 @tailwind base;
 @tailwind components;
@@ -13,4 +12,57 @@
   --dark-text: #070206;
   --border-colour: #5771d5;
   --selected: #158a69;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  overflow-y: scroll;
+}
+
+body {
+  background-color: var(--background-colour);
+  color: var(--light-text);
+  font-family: 'Source Sans Pro', sans-serif;
+  margin: 0 auto;
+}
+
+a {
+  color: var(--light-text);
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+@layer base {
+  h1 {
+    @apply text-4xl;
+  }
+  h2 {
+    @apply text-3xl;
+  }
+  h3 {
+    @apply text-2xl;
+  }
+  h4 {
+    @apply text-xl;
+  }
+  h5 {
+    @apply text-lg;
+  }
+  h6 {
+    @apply text-base;
+  }
+  h1,h2,h3,h4,h5,h6 {
+    @apply font-semibold;
+  }
 }
