--- a/src/global.css
+++ b/src/global.css
@@ -4,57 +4,60 @@
 
 @layer base {
 	@font-face {
-    font-family: 'Raleway';
-    font-weight: 400;
-    font-style: normal;
-    font-display: auto;
-    unicode-range: U+000-5FF;
-    src: local('Raleway');
-    font-display: swap;
-  }
+		font-family: 'Raleway';
+		font-weight: 400;
+		font-style: normal;
+		font-display: auto;
+		unicode-range: U+000-5FF;
+		src: local('Raleway');
+		font-display: swap;
+	}
 
-  h1 {
-    @apply text-4xl;
-  }
-  h2 {
-    @apply text-3xl;
-  }
-  h3 {
-    @apply text-2xl;
-  }
-  h4 {
-    @apply text-xl;
-  }
-  h5 {
-    @apply text-lg;
-  }
-  h6 {
-    @apply text-base;
-  }
-  h1,h2,h3,h4,h5,h6 {
-    @apply font-semibold;
-  }
-  body {
-    @apply text-textLight;
-    @apply bg-bgcolour;
-    @apply mx-auto;
-  }
+	h1 {
+		@apply text-4xl;
+	}
+	h2 {
+		@apply text-3xl;
+	}
+	h3 {
+		@apply text-2xl;
+	}
+	h4 {
+		@apply text-xl;
+	}
+	h5 {
+		@apply text-lg;
+	}
+	h6 {
+		@apply text-base;
+	}
+	p {
+		@apply text-xs;
+	}
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		@apply font-semibold;
+	}
+	body {
+		@apply text-textLight;
+		@apply bg-bgcolour;
+		@apply mx-auto;
+	}
 }
-
-
-
 
 html {
-  overflow-y: scroll;
+	overflow-y: scroll;
 }
 
-
 a {
-  color: #ececec;
+	color: #ececec;
 }
 
 .root {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
-
