--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,7 +1,4 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @layer base {
 	@font-face {
 		font-family: 'Raleway';
@@ -61,3 +58,6 @@ a {
 	display: flex;
 	flex-direction: column;
 }
+
+@tailwind components;
+@tailwind utilities
