--- a/src/app.postcss
+++ b/src/app.postcss
@@ -18,8 +18,8 @@
 	}
 
 	.theme-dark {
-		--color-text-base: #00ff00;
-		--color-text-muted: #f6ff45;
+		--color-text-base: #09d3ac;
+		--color-text-muted: #ffffff;
 		--color-text-inverted:#ececec;
 		--color-text-muted-inverted: #616161;
 		--color-text-selected:#158a69;
