--- a/src/app.postcss
+++ b/src/app.postcss
@@ -4,7 +4,7 @@
 
 
 @layer base {
-	:root {
+	.light {
 		--color-text-base: #000000;
 		--color-text-muted: #616161;
 		--color-text-inverted: #ffffff;
@@ -17,7 +17,7 @@
 		--color-border:#616161;
 	}
 
-	.theme-dark {
+	.dark {
 		--color-text-base: #09d3ac;
 		--color-text-muted: #ffffff;
 		--color-text-inverted:#ececec;
@@ -35,7 +35,6 @@
 		font-family: 'Raleway';
 		font-weight: 400;
 		font-style: normal;
-		font-display: auto;
 		unicode-range: U+000-5FF;
 		src: local('Raleway');
 		font-display: swap;
