--- a/src/app.postcss
+++ b/src/app.postcss
@@ -8,7 +8,7 @@
 		--color-text-muted: #616161;
 		--color-text-inverted: #ffffff;
 		--color-text-muted-inverted: #d7d7d7d;
-		--color-text-selected: #0db652;
+		--color-text-selected: #ff2a48;
 		--color-bg: #ffffff;
 		--color-primary: #aed6f1;
 		--color-secondary: #c5ecff;
