--- a/src/app.css
+++ b/src/app.css
@@ -21,7 +21,7 @@
 		--color-text-muted: #ffffff;
 		--color-text-inverted: #ececec;
 		--color-text-muted-inverted: #616161;
-		--color-text-selected: #dc0000;
+		--color-text-selected: #79b646;
 		--color-bg: #000000;
 		--color-primary: #021973;
 		--color-secondary: #0b327d;
